objects/DropboxConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ContentVersionAndCurrentFolderScheduleId__c</fullName>
        <label>ContentVersionAndCurrentFolderScheduleId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentFolderNumber__c</fullName>
        <label>CurrentFolderNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoveScheduleId__c</fullName>
        <label>RemoveScheduleId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oauth_token__c</fullName>
        <label>oauth_token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oauth_tokensecret__c</fullName>
        <label>oauth_tokensecret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DropboxConfig</label>
</CustomObject>